# talent-scout

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  railway.backend.toml  railway.frontend.toml
.github/workflows/: ci.yml
backend/: __init__.py  config.py  db.py  evaluation.py  main.py  models.py  outreach.py  requirements.txt  search.py  seed.py  state.py  voice.py  workflow.py
backend/tests/: test_api.py  test_voice.py  test_workflow.py
docs/: PLANS.md  README.md  agent-responsibly.md  architecture.md  bootstrap-checklist.md  elevenlabs-voice-agent-setup.md  external-apis-railway-deploy-longjobs.md  golden-principles.md  index.md  integration-guardrails.md  privacy.md  quality-score.md  reliability.md
docs/change-reviews/: README.md
docs/exec-plans/: template.md
docs/exec-plans/active/: README.md
docs/references/: README.md  azure-openai.md  integration-status.md  langdock.md  llm-observability.md  openai-codex-execplans-reference.md  provider-routing.md
evals/: README.md
evals/smoke/: README.md  hello-world.json
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/public/: workday.html
frontend/src/: App.tsx  styles.css
scripts/: capture_fixture.py  check_repo.py  cleanup_generated.py  preflight.py  run_harness.py
tests/: test_harness_scripts.py  test_preflight.py  test_repo_contracts.py
tests/fixtures/: README.md
voice/: README.md  agents.json  tools.json
voice/agent_configs/: Candidate-Outreach.json
(+1 files in other folders)
